# acadflow

./: .gitignore  README.md
backend/: .env.example  init_db.py  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: auth.py  ca2.py  ca3.py  faculty.py  sections.py  student_marks.py  students.py  subjects.py  uploads.py
backend/app/core/: config.py
backend/app/schemas/: auth.py  faculty.py  student.py  subject.py
backend/app/services/: ai_service.py  auth.py  email_service.py  pdf_generator.py  supabase.py
backend/app/utils/: auth.py  calculations.py
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: Layout.tsx  ProtectedRoute.tsx  SetupModal.tsx  Sidebar.tsx  StudentSidebar.tsx
frontend/src/components/layouts/: DashboardLayout.tsx  Header.tsx  Sidebar.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: AdminDashboardPage.tsx  AssessmentHubPage.tsx  CA3Evaluation.tsx  DashboardPage.tsx  FacultyCA1.tsx  FacultyCA2.tsx  FacultyDashboard.tsx  FacultyFormPage.tsx  FacultyPage.tsx  FacultySettings.tsx  FacultyStudents.tsx  FacultySubjects.tsx  Login.tsx  LoginPage.tsx  SettingsPage.tsx  StudentDashboard.tsx  StudentFormPage.tsx  StudentMarks.tsx  StudentPortalPage.tsx  StudentsPage.tsx  SubjectFormPage.tsx  SubjectsPage.tsx
frontend/src/services/: api.ts  index.ts
frontend/src/types/: index.ts
supabase/migrations/: 001_initial_schema.sql
