[project]
name = "acadflow-backend"
version = "1.0.0"
description = "AcadFlow API - Assessment Automation Platform"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.31.0",
    "pydantic==2.9.0",
    "pydantic-settings==2.5.0",
    "python-multipart==0.0.9",
    "sqlalchemy==2.0.35",
    "asyncpg>=0.30.0",
    "alembic==1.13.2",
    "supabase==2.8.0",
    "reportlab==4.2.5",
    "resend>=2.0.0,<3.0.0",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "httpx==0.27.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
